--- a/index.html
+++ b/index.html
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Dillon Jordan Photos">
-  <meta name="keywords" content="Dillon,Jordan,Photos,photographer,dillonjordanphotos">
-  <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/favicon/site.webmanifest">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <title>DILLON JORDAN | PHOTOGRAPHER</title>
-</head>
-
-<body class="bg-light text-dark">
-  
-  <div class="jumbotron bg-light text-center">
-    <h6 class="text-uppercase">Dillon Jordan | Photographer</h6>
-    <a href="/" class="btn btn-light btn-sm text-decoration-none text-uppercase active">Home</a> <a href="/work" class="btn btn-light btn-sm text-decoration-none text-uppercase">Work</a> <a href="/contact" class="btn btn-light btn-sm text-decoration-none text-uppercase">Contact</a> <a href="/about" class="btn btn-light btn-sm text-decoration-none text-uppercase">About</a>
-  </div>
-
-  <div class="container pb-3 mb-3">
-    <div id="hc" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active"><img src="/images/music/childish-gambino/3.jpg?nf_resize=fit&w=1200" alt="Childish Gambino" class="d-block w-100"></div>
-        <div class="carousel-item"><img src="/images/portraits/cory/3.jpg?nf_resize=fit&w=1200" alt="Cowboy Mugshot" class="d-block w-100"></div>
-        <div class="carousel-item"><img src="/images/portraits/peyton/8.jpg?nf_resize=fit&w=1200" alt="Portrait photo" class="d-block w-100"></div>
-        <div class="carousel-item"><img src="/images/grads/18.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div>
-        <div class="carousel-item"><img src="/images/grads/20.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div>
-        <div class="carousel-item"><img src="/images/grads/22.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div>
-      </div>
-      <a class="carousel-control-prev" href="#hc" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#hc" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
-
-  <div class="jumbotron bg-light text-secondary text-center text-uppercase">
-    <small>
-      <p class="mb-1">Made with &#x2764; + &#x2615; by <a class="text-secondary" href="https://moonshotdesignco.com">Moonshot Design Company</a></p>
-      <p class="mb-1">Copyright &copy; 2020 Dillon Jordan</p>
-      <p class="mb-1">all rights reserved</p>
-    </small>
-    <p class="mb-1"><a class="text-secondary" href="https://www.instagram.com/brightsidedillon/"><i class="fab fa-instagram"></i></a> <a class="text-secondary" href="https://www.twitter.com/brightsidedill"><i class="fab fa-twitter"></i></a> <a class="text-secondary" href="mailto:dillonjordan2544@gmail.com"><i class="far fa-envelope"></i></a></p>
-  </div>
-  
-  <!-- FontAwesome JS -->
-  <script src="https://kit.fontawesome.com/0bd68cd747.js" crossorigin="anonymous"></script>
-  
-  <!-- Bootstrap JS/jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="description" content="Dillon Jordan Photos"><meta name="keywords" content="Dillon,Jordan,Photos,photographer,dillonjordanphotos"><link rel="icon shortcut" href="/favicon/favicon.ico" type="image/x-icon"><link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png"><link rel="manifest" href="/favicon/site.webmanifest"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin><title>DILLON JORDAN PHOTOS</title></head><body class="bg-light text-dark"> <div class="bg-light jumbotron text-center"> <h6 class="text-uppercase">Dillon Jordan | Photographer</h6> <a href="/" class="active btn btn-light btn-sm text-decoration-none text-uppercase">Home</a> <a href="/work" class="btn btn-light btn-sm text-decoration-none text-uppercase">Work</a> <a href="/contact" class="btn btn-light btn-sm text-decoration-none text-uppercase">Contact</a> <a href="/about" class="btn btn-light btn-sm text-decoration-none text-uppercase">About</a> </div> <div class="container mb-3 pb-3"> <div id="hc" class="carousel slide" data-ride="carousel"> <div class="carousel-inner"> <div class="active carousel-item"><img src="/images/music/childish-gambino/3.jpg?nf_resize=fit&w=1200" alt="Childish Gambino" class="d-block w-100"></div> <div class="carousel-item"><img src="/images/portraits/cory/3.jpg?nf_resize=fit&w=1200" alt="Cowboy Mugshot" class="d-block w-100"></div> <div class="carousel-item"><img src="/images/portraits/peyton/8.jpg?nf_resize=fit&w=1200" alt="Portrait photo" class="d-block w-100"></div> <div class="carousel-item"><img src="/images/grads/18.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div> <div class="carousel-item"><img src="/images/grads/20.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div> <div class="carousel-item"><img src="/images/grads/22.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div> </div> <a class="carousel-control-prev" href="#hc" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#hc" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div> </div> <div class="bg-light jumbotron text-center text-secondary text-uppercase"> <small> <p class="mb-1">Made with &#x2764; + &#x2615; by <a class="text-secondary" href="https://moonshotdesignco.com">Moonshot Design Company</a></p> <p class="mb-1">Copyright &copy; 2020 Dillon Jordan</p> <p class="mb-1">all rights reserved</p> </small> <p class="mb-1"><a class="text-secondary" href="https://www.instagram.com/brightsidedillon/"><i class="fa-instagram fab"></i></a> <a class="text-secondary" href="https://www.twitter.com/brightsidedill"><i class="fa-twitter fab"></i></a> <a class="text-secondary" href="mailto:dillonjordan2544@gmail.com"><i class="fa-envelope far"></i></a></p> </div>  <script src="https://kit.fontawesome.com/0bd68cd747.js" crossorigin></script>  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin></script> <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin></script> <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin></script> </body></html>
