--- a/index_revert.html
+++ b/index_revert.html
@@ -14,29 +14,37 @@
   <link rel="manifest" href="/favicon/site.webmanifest">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <title>ABOUT | DILLON JORDAN | PHOTOGRAPHER</title>
+  <title>DILLON JORDAN | PHOTOGRAPHER</title>
 </head>
 
 <body class="bg-light text-dark">
   
   <div class="jumbotron bg-light text-center">
     <h6 class="text-uppercase">Dillon Jordan | Photographer</h6>
-    <a href="/" class="btn btn-light btn-sm text-decoration-none text-uppercase">Home</a> <a href="/work" class="btn btn-light btn-sm text-decoration-none text-uppercase">Work</a> <a href="/contact" class="btn btn-light btn-sm text-decoration-none text-uppercase">Contact</a> <a href="/about" class="btn btn-light btn-sm text-decoration-none text-uppercase active">About</a>
+    <a href="/" class="btn btn-light btn-sm text-decoration-none text-uppercase active">Home</a> <a href="/work" class="btn btn-light btn-sm text-decoration-none text-uppercase">Work</a> <a href="/contact" class="btn btn-light btn-sm text-decoration-none text-uppercase">Contact</a> <a href="/about" class="btn btn-light btn-sm text-decoration-none text-uppercase">About</a>
   </div>
-  
-  <div class="container">
-    <div class="row text-center">
-      <div class="col mb-5">
-        <p class="display-4">Dillon Jordan is a photographer.</p>
+
+  <div class="container pb-3 mb-3">
+    <div id="hc" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active"><img src="/images/music/childish-gambino/3.jpg?nf_resize=fit&w=1200" alt="Childish Gambino" class="d-block w-100"></div>
+        <div class="carousel-item"><img src="/images/portraits/cory/3.jpg?nf_resize=fit&w=1200" alt="Cowboy Mugshot" class="d-block w-100"></div>
+        <div class="carousel-item"><img src="/images/portraits/peyton/8.jpg?nf_resize=fit&w=1200" alt="Portrait photo" class="d-block w-100"></div>
+        <div class="carousel-item"><img src="/images/grads/18.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div>
+        <div class="carousel-item"><img src="/images/grads/20.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div>
+        <div class="carousel-item"><img src="/images/grads/22.jpg?nf_resize=fit&w=1200" alt="Graduate photo" class="d-block w-100"></div>
       </div>
-    </div>
-    <div class="row text-center">
-      <div class="col pb-3 mb-3">
-        <img src="/images/dillon/2.jpg?nf_resize=fit&w=1200" alt="Photo of Dillon Jordan" class="w-100 rounded">
-      </div>
+      <a class="carousel-control-prev" href="#hc" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#hc" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
-  
+
   <div class="jumbotron bg-light text-secondary text-center text-uppercase">
     <small>
       <p class="mb-1">Made with &#x2764; + &#x2615; by <a class="text-secondary" href="https://moonshotdesignco.com">Moonshot Design Company</a></p>
